--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,191 @@
-black
-flake8
-isort
-pip
-python-dotenv
--e .
+aiofiles==23.2.1
+albucore==0.0.9
+albumentations==1.4.8
+altair==5.3.0
+annotated-types==0.7.0
+anyio==4.4.0
+asttokens @ file:///home/conda/feedstock_root/build_artifacts/asttokens_1698341106958/work
+attrs==23.2.0
+blinker==1.8.2
+build==1.2.1
+CacheControl==0.14.0
+certifi==2024.2.2
+cffi==1.16.0
+charset-normalizer==3.3.2
+cleo==2.1.0
+click==8.1.7
+cmake==3.29.3
+coloredlogs==15.0.1
+comm @ file:///home/conda/feedstock_root/build_artifacts/comm_1710320294760/work
+contourpy==1.2.1
+crashtest==0.4.1
+cryptography==42.0.8
+cycler==0.12.1
+Cython==3.0.10
+cython_bbox==0.1.5
+debugpy @ file:///croot/debugpy_1690905042057/work
+decorator @ file:///home/conda/feedstock_root/build_artifacts/decorator_1641555617451/work
+deep-sort-realtime==1.3.2
+distlib==0.3.8
+dnspython==2.6.1
+docker-pycreds==0.4.0
+dulwich==0.21.7
+email_validator==2.1.1
+exceptiongroup @ file:///home/conda/feedstock_root/build_artifacts/exceptiongroup_1704921103267/work
+executing @ file:///home/conda/feedstock_root/build_artifacts/executing_1698579936712/work
+fastapi==0.111.0
+fastapi-cli==0.0.4
+fastjsonschema==2.20.0
+ffmpy==0.3.2
+filelock==3.14.0
+filterpy==1.4.5
+Flask==3.0.3
+Flask-Cors==4.0.1
+flatbuffers==24.3.25
+fonttools==4.53.0
+fsspec==2024.5.0
+gitdb==4.0.11
+GitPython==3.1.43
+gradio==4.31.5
+gradio_client==0.16.4
+h11==0.14.0
+httpcore==1.0.5
+httptools==0.6.1
+httpx==0.27.0
+huggingface-hub==0.23.2
+humanfriendly==10.0
+idna==3.7
+imageio==2.34.1
+importlib_metadata @ file:///home/conda/feedstock_root/build_artifacts/importlib-metadata_1710971335535/work
+importlib_resources==6.4.0
+installer==0.7.0
+ipykernel @ file:///home/conda/feedstock_root/build_artifacts/ipykernel_1708996548741/work
+ipython @ file:///home/conda/feedstock_root/build_artifacts/ipython_1701831663892/work
+itsdangerous==2.2.0
+jaraco.classes==3.4.0
+jedi @ file:///home/conda/feedstock_root/build_artifacts/jedi_1696326070614/work
+jeepney==0.8.0
+Jinja2==3.1.4
+joblib==1.4.2
+jsonschema==4.22.0
+jsonschema-specifications==2023.12.1
+jupyter_client @ file:///home/conda/feedstock_root/build_artifacts/jupyter_client_1716472197302/work
+jupyter_core @ file:///home/conda/feedstock_root/build_artifacts/jupyter_core_1710257447442/work
+keyring==24.3.1
+kiwisolver==1.4.5
+lap==0.4.0
+lazy_loader==0.4
+lit==18.1.6
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+matplotlib==3.9.0
+matplotlib-inline @ file:///home/conda/feedstock_root/build_artifacts/matplotlib-inline_1713250518406/work
+mdurl==0.1.2
+more-itertools==10.3.0
+mpmath==1.3.0
+msgpack==1.0.8
+nest_asyncio @ file:///home/conda/feedstock_root/build_artifacts/nest-asyncio_1705850609492/work
+networkx==3.2.1
+numpy==1.26.4
+nvidia-cublas-cu11==11.10.3.66
+nvidia-cuda-cupti-cu11==11.7.101
+nvidia-cuda-nvrtc-cu11==11.7.99
+nvidia-cuda-runtime-cu11==11.7.99
+nvidia-cudnn-cu11==8.5.0.96
+nvidia-cufft-cu11==10.9.0.58
+nvidia-curand-cu11==10.2.10.91
+nvidia-cusolver-cu11==11.4.0.1
+nvidia-cusparse-cu11==11.7.4.91
+nvidia-nccl-cu11==2.14.3
+nvidia-nvtx-cu11==11.7.91
+onnx==1.14.0
+onnxruntime==1.15.1
+onnxruntime-gpu==1.18.0
+onnxsim==0.4.36
+opencv-python==4.9.0.80
+opencv-python-headless==4.9.0.80
+orjson==3.10.3
+packaging @ file:///home/conda/feedstock_root/build_artifacts/packaging_1710075952259/work
+pandas==2.2.2
+parso @ file:///home/conda/feedstock_root/build_artifacts/parso_1712320355065/work
+pexpect @ file:///home/conda/feedstock_root/build_artifacts/pexpect_1706113125309/work
+pickleshare @ file:///home/conda/feedstock_root/build_artifacts/pickleshare_1602536217715/work
+pillow==10.3.0
+pkginfo==1.11.1
+platformdirs @ file:///home/conda/feedstock_root/build_artifacts/platformdirs_1715777629804/work
+poetry==1.8.3
+poetry-core==1.9.0
+poetry-plugin-export==1.8.0
+prompt-toolkit @ file:///home/conda/feedstock_root/build_artifacts/prompt-toolkit_1702399386289/work
+protobuf==5.27.0
+psutil @ file:///home/conda/feedstock_root/build_artifacts/psutil_1705722404069/work
+ptyprocess @ file:///home/conda/feedstock_root/build_artifacts/ptyprocess_1609419310487/work/dist/ptyprocess-0.7.0-py2.py3-none-any.whl
+pure-eval @ file:///home/conda/feedstock_root/build_artifacts/pure_eval_1642875951954/work
+py-cpuinfo==9.0.0
+pycocotools==2.0.7
+pycparser==2.22
+pydantic==2.7.2
+pydantic_core==2.18.3
+pydub==0.25.1
+Pygments @ file:///home/conda/feedstock_root/build_artifacts/pygments_1714846767233/work
+pyparsing==3.1.2
+pyproject_hooks==1.1.0
+pyTelegramBotAPI==4.19.1
+python-dateutil @ file:///home/conda/feedstock_root/build_artifacts/python-dateutil_1709299778482/work
+python-dotenv==1.0.1
+python-multipart==0.0.9
+python-telegram-bot==21.3
+pytz==2024.1
+PyYAML==6.0.1
+pyzmq @ file:///croot/pyzmq_1705605076900/work
+rapidfuzz==3.9.3
+referencing==0.35.1
+requests==2.32.3
+requests-toolbelt==1.0.0
+rich==13.7.1
+rpds-py==0.18.1
+ruff==0.4.7
+scikit-image==0.22.0
+scikit-learn==1.5.0
+scipy==1.13.1
+seaborn==0.13.2
+SecretStorage==3.3.3
+semantic-version==2.10.0
+sentry-sdk==2.5.1
+setproctitle==1.3.3
+shellingham==1.5.4
+six @ file:///home/conda/feedstock_root/build_artifacts/six_1620240208055/work
+smmap==5.0.1
+sniffio==1.3.1
+stack-data @ file:///home/conda/feedstock_root/build_artifacts/stack_data_1669632077133/work
+starlette==0.37.2
+sympy==1.12.1
+telebot==0.0.5
+thop==0.1.1.post2209072238
+threadpoolctl==3.5.0
+tifffile==2024.5.22
+tomli==2.0.1
+tomlkit==0.12.0
+toolz==0.12.1
+torch==2.0.1
+torchvision==0.15.2
+tornado @ file:///home/conda/feedstock_root/build_artifacts/tornado_1708363103305/work
+tqdm==4.66.4
+traitlets @ file:///home/conda/feedstock_root/build_artifacts/traitlets_1713535121073/work
+triton==2.0.0
+trove-classifiers==2024.5.22
+typer==0.12.3
+typing_extensions @ file:///home/conda/feedstock_root/build_artifacts/typing_extensions_1712329955671/work
+tzdata==2024.1
+ujson==5.10.0
+ultralytics @ git+https://github.com/THU-MIG/yolov10.git@36efe34fe1126a4ce639403f1ce16fa0edbc16fd
+urllib3==2.2.1
+uvicorn==0.30.0
+uvloop==0.19.0
+virtualenv==20.26.2
+wandb==0.17.1
+watchfiles==0.22.0
+wcwidth @ file:///home/conda/feedstock_root/build_artifacts/wcwidth_1704731205417/work
+websockets==11.0.3
+Werkzeug==3.0.3
+zipp @ file:///home/conda/feedstock_root/build_artifacts/zipp_1695255097490/work
